# lib/api-spec/openapi.yaml
@@ -1116,8 +1116,6 @@ components:
         password:
           type: string
           minLength: 8
-        turnstileToken:
-          type: string
 
     LoginRequest:
       type: object
@@ -1128,8 +1126,6 @@ components:
         email:
           type: string
         password:
-          type: string
-        turnstileToken:
           type: string
 
     ErrorResponse:
